@@ -13,43 +13,44 @@ import java.security.ProtectionDomain;
 
 import com.site0.walnut.util.Wlang;
 
-@SuppressWarnings({"unchecked", "rawtypes"})
+@SuppressWarnings({"unchecked", "rawtypes", "removal"})
 public class ReflectTool {
-	
-	protected static boolean hasLookup = false;
-	protected static Method DEFINE_CLASS;
-	protected static ProtectionDomain PROTECTION_DOMAIN;
-	static {
-		try {
-			MethodHandles.lookup();
-			hasLookup = true;
-		}
-		catch (Throwable e) {
-			PROTECTION_DOMAIN = getProtectionDomain(ReflectTool.class);
-	        AccessController.doPrivileged(new PrivilegedAction() {
-	            public Object run() {
-	                try {
-	                    Class loader = Class.forName("java.lang.ClassLoader"); // JVM
-	                                                                           // crash
-	                                                                           // w/o
-	                                                                           // this
-	                    DEFINE_CLASS = loader.getDeclaredMethod("defineClass",
-	                                                            new Class[]{String.class,
-	                                                                        byte[].class,
-	                                                                        Integer.TYPE,
-	                                                                        Integer.TYPE,
-	                                                                        ProtectionDomain.class});
-	                    DEFINE_CLASS.setAccessible(true);
-	                }
-	                catch (Throwable e) {
-	                    // Lang.impossible();
-	                }
-	                return null;
-	            }
-	        });
-		}
-	}
 
+    protected static boolean hasLookup = false;
+    protected static Method DEFINE_CLASS;
+    protected static ProtectionDomain PROTECTION_DOMAIN;
+    static {
+        try {
+            MethodHandles.lookup();
+            hasLookup = true;
+        }
+        catch (Throwable e) {
+            // PROTECTION_DOMAIN = getProtectionDomain(ReflectTool.class);
+            // AccessController.doPrivileged(new PrivilegedAction() {
+            // public Object run() {
+            // try {
+            // Class loader = Class.forName("java.lang.ClassLoader"); // JVM
+            // // crash
+            // // w/o
+            // // this
+            // DEFINE_CLASS = loader.getDeclaredMethod("defineClass",
+            // new Class[]{String.class,
+            // byte[].class,
+            // Integer.TYPE,
+            // Integer.TYPE,
+            // ProtectionDomain.class});
+            // DEFINE_CLASS.setAccessible(true);
+            // }
+            // catch (Throwable e) {
+            // // Lang.impossible();
+            // }
+            // return null;
+            // }
+            // });
+        }
+    }
+
+    @Deprecated
     public static ProtectionDomain getProtectionDomain(final Class source) {
         if (source == null) {
             return null;
@@ -66,25 +67,25 @@ public class ReflectTool {
         return defineClass(className, b, loader, PROTECTION_DOMAIN);
     }
 
-    @SuppressWarnings("deprecation")
     public static Class defineClass(String className,
                                     byte[] b,
                                     ClassLoader loader,
-                                    ProtectionDomain protectionDomain) throws Exception {
-    	if (hasLookup) {
-        	Class c = MethodHandles.lookup().defineClass(b);
+                                    ProtectionDomain protectionDomain)
+            throws Exception {
+        if (hasLookup) {
+            Class c = MethodHandles.lookup().defineClass(b);
             Class.forName(className, true, loader);
             return c;
-    	}
-    	if (DEFINE_CLASS == null)
-    		throw Wlang.impossible();
+        }
+        if (DEFINE_CLASS == null)
+            throw Wlang.impossible();
         Object[] args = new Object[]{className,
-                b,
-                new Integer(0),
-                new Integer(b.length),
-                protectionDomain};
+                                     b,
+                                     Integer.valueOf(0),
+                                     Integer.valueOf(b.length),
+                                     protectionDomain};
         if (loader == null)
-        	loader = ReflectTool.class.getClassLoader();
+            loader = ReflectTool.class.getClassLoader();
         Class c = (Class) DEFINE_CLASS.invoke(loader, args);
         // Force static initializers to run.
         Class.forName(className, true, loader);
@@ -93,8 +94,11 @@ public class ReflectTool {
 
     /**
      * 泛型类clazz,field字段的真实class对象.
-     * @param clazz 泛型class
-     * @param field 字段
+     * 
+     * @param clazz
+     *            泛型class
+     * @param field
+     *            字段
      * @return
      */
     public static Class<?> getGenericFieldType(Class<?> clazz, Field field) {
@@ -102,11 +106,13 @@ public class ReflectTool {
         return getRealGenericClass(clazz, fieldType);
     }
 
-
     /**
      * 获取泛型类参数的实际类型.例如 Map<String, E>，获取E实际的类型.
-     * @param clazz 泛型基类.
-     * @param type 泛型基类中的某个type
+     * 
+     * @param clazz
+     *            泛型基类.
+     * @param type
+     *            泛型基类中的某个type
      * @return
      */
     public static Class<?> getParameterRealGenericClass(Class<?> clazz, Type type, int index) {
@@ -117,16 +123,17 @@ public class ReflectTool {
         return Object.class;
     }
 
-
-
     /**
      * 获取泛型类中type变量对应的真实class
-     * @param clazz 泛型基类.
-     * @param type 泛型基类中的某个type
+     * 
+     * @param clazz
+     *            泛型基类.
+     * @param type
+     *            泛型基类中的某个type
      * @return
      */
     public static Class<?> getRealGenericClass(Class<?> clazz, Type type) {
-        if(type instanceof TypeVariable) {
+        if (type instanceof TypeVariable) {
             TypeVariable<?> tv = (TypeVariable<?>) type;
             Type genericFieldType = getInheritGenericType(clazz, tv);
             if (genericFieldType != null) {
@@ -138,21 +145,23 @@ public class ReflectTool {
 
     /**
      * 获取泛型类中type对应的真实Type
+     * 
      * @param clazz
      * @param type
      * @return
      */
     public static Type getInheritGenericType(Class<?> clazz, Type type) {
-        if(type instanceof TypeVariable) {
+        if (type instanceof TypeVariable) {
             TypeVariable<?> tv = (TypeVariable<?>) type;
             return getInheritGenericType(clazz, tv);
-        }else {
+        } else {
             return type;
         }
     }
 
     /**
      * 获取泛型类clazz中某个TypeVariable对应的真实Type.
+     * 
      * @param clazz
      * @param tv
      * @return
@@ -170,7 +179,10 @@ public class ReflectTool {
                 ParameterizedType ptype = (ParameterizedType) type;
 
                 Type rawType = ptype.getRawType();
-                boolean eq = gd.equals(rawType) || (gd instanceof Class && rawType instanceof Class && ((Class) gd).isAssignableFrom((Class) rawType));
+                boolean eq = gd.equals(rawType)
+                             || (gd instanceof Class
+                                 && rawType instanceof Class
+                                 && ((Class) gd).isAssignableFrom((Class) rawType));
                 if (eq) {
                     TypeVariable<?>[] tvs = gd.getTypeParameters();
                     Type[] types = ptype.getActualTypeArguments();
